Remove reservation button, always show Disponible, fix badge clipping

--- a/styles.css
+++ b/styles.css
@@ -172,8 +172,7 @@ header h1 {
     font-size: 0.82rem;
     color:  #c8a84e;
     line-height: 1.5;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-top: 2px;
 }
 
 /* Counter */
